@@ -1,5 +1,6 @@
 1.6.8 RC3
 ---
+- applied patch #1612477. _UNICODE / UNICODE fixes. more win32 unicode fixes.
 - TIFF compression method changed to LZW
 - added the DEPRECATED macro and deprecated iluGenImage and iluDeleteImage
 - glCompress2DARB now works with OS X too.
